5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1646_651.log
== TEST (2019-04-09 16:29:02) 
-- CODE:
al=float(input("altura:"))
se=float(input("M/F:"))

H=(72.7*al)-58
F=(62.1*al)-44.7

if(se=="F"):
	print(round(F,2))
else:
	print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    se=float(input())
ValueError: could not convert string to float: 'F'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:37) 
-- CODE:
al=float(input("altura:"))
se=float(input("M/F:"))

H=(72.7*al)-58
F=(62.1*al)-44.7

if(se=="F"):
	print(round(F,2))
else:
	print(round(H,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    se=float(input())
ValueError: could not convert string to float: 'F'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:01) 
-- CODE:
al=float(input("altura:"))
se=float(input("M/F:"))

H=(72.7*al)-58
F=(62.1*al)-44.7

if(se=="F"):
	print(round(F,2))
else:
	print(round(H,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    se=float(input())
ValueError: could not convert string to float: 'F'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:29) 
-- CODE:
al=float(input("altura:"))
se=input("M/F:")

H=(72.7*al)-58
M=(62.1*al)-44.7

if(se=="F"):
	print(round(F,2))
else:
	print(round(H,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(F,2))
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:30:49) 
-- CODE:
al=float(input("altura:"))
se=input("M/F:")

H=(72.7*al)-58
M=(62.1*al)-44.7

if(se.upper=="F"):
	print(round(F,2))
else:
	print(round(H,2))
-- EXECUTION TIME:
0.157788
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.7
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:54) 
-- CODE:
al=float(input("altura:"))
se=input("M/F:")

H=(72.7*al)-58
M=(62.1*al)-44.7

if(se.upper=="F"):
	print(round(F,2))
else:
	print(round(H,2))
-- OUTPUT:
14.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:31:06) 
-- CODE:
al=float(input("altura:"))
se=input("M/F:")

H=(72.7*al)-58
M=(62.1*al)-44.7

if(se.upper=="M"):
	print(round(F,2))
else:
	print(round(H,2))
-- OUTPUT:
14.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:31:28) 
-- CODE:
al=float(input("altura:"))
se=input("M/F:")

H=(72.7*al)-58
M=(62.1*al)-44.7

if(se.upper=="H"):
	print(round(H,2))
else:
	print(round(M,2))
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:31:33) 
-- CODE:
al=float(input("altura:"))
se=input("M/F:")

H=(72.7*al)-58
M=(62.1*al)-44.7

if(se.upper=="H"):
	print(round(H,2))
else:
	print(round(M,2))
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:31:36) 
-- CODE:
al=float(input("altura:"))
se=input("M/F:")

H=(72.7*al)-58
M=(62.1*al)-44.7

if(se.upper=="H"):
	print(round(H,2))
else:
	print(round(M,2))
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:32:07) 
-- CODE:
al=float(input("altura:"))
se=input("M/F:")

H=(72.7*al)-58
M=(62.1*al)-44.7

if(se.upper=="M"):
	print(round(H,2))
else:
	print(round(M,2))
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:32:13) 
-- CODE:
al=float(input("altura:"))
se=input("M/F:")

H=(72.7*al)-58
M=(62.1*al)-44.7

if(se.upper=="M"):
	print(round(H,2))
else:
	print(round(M,2))
-- EXECUTION TIME:
0.234689
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.93
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:33:34) 
-- CODE:
al=float(input("altura:"))
se=input("M/F:")

M=(72.7*al)-58
F=(62.1*al)-44.7

if(se.upper=="M"):
	O=M
else:
	O=F
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:33:52) 
-- CODE:
al=float(input("altura:"))
se=input("M/F:")

M=(72.7*al)-58
F=(62.1*al)-44.7

if(se.upper=="M"):
	O=M
else:
	O=F
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:36:00) 
-- CODE:
a=float(input("altura:"))
s=input("M/F:")

M=(72.7*a)-58
F=(62.1*a)-44.7

if(s.upper=="M"):
	I=M
else:
	I=F
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:36:26) 
-- CODE:
a=float(input("altura:"))
s=input("M/F:")

M=(72.7*a)-58
F=(62.1*a)-44.7

if(s.upper=="M"):
	I=M
else:
	I=F
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:37:56) 
-- CODE:
a=float(input("altura:"))
s=input("M/F:")

go=(72.7*a)-58
ga=(62.1*a)-44.7

if(s.upper=="M"):
	po=go
else:
	po=ga
print(po)	

-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:38:26) 
-- CODE:
a=float(input("altura:"))
s=input("M/F:")

ga=(72.7*a)-58
go=(62.1*a)-44.7

if(s.upper=="M"):
	po=go
else:
	po=ga
print(po)	

-- OUTPUT:
14.700000000000003
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:38:45) 
-- CODE:
a=float(input("altura:"))
s=input("M/F:")

ga=(72.7*a)-58
go=(62.1*a)-44.7

if(s.upper=="M"):
	po=go
else:
	po=ga
print(round(po,2))	

-- EXECUTION TIME:
0.134427
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.7
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:38:46) 
-- CODE:
a=float(input("altura:"))
s=input("M/F:")

ga=(72.7*a)-58
go=(62.1*a)-44.7

if(s.upper=="M"):
	po=go
else:
	po=ga
print(round(po,2))	

-- OUTPUT:
14.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:39:16) 
-- CODE:
a=float(input("altura:"))
s=input("M/F:")

ga=(72.7*a)-58
go=(62.1*a)-44.7

if(s.upper=="M"):
	po=go
else:
	po=ga
print(round(po,2))	

-- OUTPUT:
14.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:39:48) 
-- CODE:
a=float(input("altura:"))
s=input("M/F:").upper

ga=(72.7*a)-58
go=(62.1*a)-44.7

if(s.upper=="M"):
	po=go
else:
	po=ga
print(round(po,2))	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(s.upper=="M"):
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:40:01) 
-- CODE:
a=float(input("altura:"))
s=input("M/F:")

ga=(72.7*a)-58
go=(62.1*a)-44.7

if(s.upper=="M"):
	po=go
else:
	po=ga
print(round(po,2))	

-- OUTPUT:
14.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:40:04) 
-- CODE:
a=float(input("altura:"))
s=input("M/F:")

ga=(72.7*a)-58
go=(62.1*a)-44.7

if(s.upper=="M"):
	po=go
else:
	po=ga
print(round(po,2))	

-- OUTPUT:
14.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:40:16) 
-- CODE:
a=float(input("altura:"))
s=input("M/F:")

ga=(72.7*a)-58
go=(62.1*a)-44.7

if(s.upper=="M"):
	po=go
else:
	po=ga
print(round(po,2))	

-- OUTPUT:
14.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:40:35) 
-- CODE:
a=float(input("altura:"))
s=input("M/F:")

ga=(72.7*a)-58
go=(62.1*a)-44.7

if(s.upper=="M"):
	po=go
else:
	po=ga
print(round(po,2))	

-- OUTPUT:
14.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:40:40) 
-- CODE:
a=float(input("altura:"))
s=input("M/F:")

ga=(72.7*a)-58
go=(62.1*a)-44.7

if(s.upper=="M"):
	po=go
else:
	po=ga
print(round(po,2))	

-- OUTPUT:
14.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:41:07) 
-- CODE:
a=float(input("altura:"))
s=input("M/F:")

g1=(72.7*a)-58
g2=(62.1*a)-44.7

if(s.upper=="M"):
	po=g1
else:
	po=g2
print(round(po,2))	

-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:41:14) 
-- CODE:
a=float(input("altura:"))
s=input("M/F:")

g1=(72.7*a)-58
g2=(62.1*a)-44.7

if(s.upper=="M"):
	po=g1
else:
	po=g2
print(round(po,2))	

-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:36:34) 
-- CODE:
a=float(input("altura:"))
s=input("M/F:")

g1=(72.7*a)-58
g2=(62.1*a)-44.7

if(s.upper=="m"):
	po=g1
else:
	po=g2
print(round(po,2))	

-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:36:52) 
-- CODE:
a=float(input("altura:"))
s=input("M/F:")

g1=(72.7*a)-58
g2=(62.1*a)-44.7

if(s.upper=="m"):
	po=g1
else:
	po=g2
print(round(po,2))	

-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:37:43) 
-- CODE:
a=float(input("altura:"))
s=input("M/F:")

g1=(72.7*a)-58
g2=(62.1*a)-44.7

if(s.upper()=="m"):
	po=g1
else:
	po=g2
print(round(po,2))	

-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:37:51) 
-- CODE:
a=float(input("altura:"))
s=input("M/F:")

g1=(72.7*a)-58
g2=(62.1*a)-44.7

if(s.upper()=="m"):
	po=g1
else:
	po=g2
print(round(po,2))	

-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:38:04) 
-- CODE:
a=float(input("altura:"))
s=input("M/F:")

g1=(72.7*a)-58
g2=(62.1*a)-44.7

if(s.upper()=="M"):
	po=g1
else:
	po=g2
print(round(po,2))	

-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:38:11) 
-- CODE:
a=float(input("altura:"))
s=input("M/F:")

g1=(72.7*a)-58
g2=(62.1*a)-44.7

if(s.upper()=="M"):
	po=g1
else:
	po=g2
print(round(po,2))	

-- EXECUTION TIME:
0.14328
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
